--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 							<h2>请"Ctrl+D "收藏本页浏览器收藏夹</h2>
 							<ul>
 								<li>
-									🔥ChatGPT下单地址：（临时使用）
-									<a href="https://www.aitmk.com/" target="_blank"><i>https://www.aitmk.com/</i></a>
+									🔥ChatGPT下单地址：（2023.4.14更新）
+									<a href="http://buy.xiaoidc.top/" target="_blank"><i>http://buy.xiaoidc.top/</i></a>
 									
 								</span></span></li>
 								<li>
