--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
 							<h2>请"Ctrl+D "收藏本页浏览器收藏夹</h2>
 							<ul>
 								<li>
-									🔥ChatGPT下单地址一：（2023.4.14更新）
+									🔥ChatGPT购买地址①：(2023.4.14更新)
 									<a href="http://buy.xiaoidc.top/" target="_blank"><i>http://buy.xiaoidc.top/</i></a>
 									
 								</span></span></li>
 								<li>
-									🔥ChatGPT下单地址二：（2023.4.14更新）
+									🔥ChatGPT购买地址②：(2023.4.14更新)
 									<a href="http://buy.rainyun.pro/" target="_blank"><i>http://buy.rainyun.pro/</i></a>
 									
 								</span></span></li>
