--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 								<li>
 									🔥ChatGPT中文镜像地址（临时使用）
 									
-								<a href="http://chatgpt.riyuehou.com/" target="_blank"><i>http://chatgpt.riyuehou.com/</i></a>	
+								<a href="http://chat.riyuehou.com/" target="_blank"><i>http://chat.riyuehou.com/</i></a>	
 								</span></span></li>
 								
 								<li style="font-size: 15px;">
