--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 							<ul>
 								<li>
 									🔥ChatGPT购买地址①（临时使用）
-									<a href="http://chatgpt.xiaoidc.top/" target="_blank"><i>http://chatgpt.xiaoidc.top/</i></a>
-									<span style="color:#ff0000;">🕛<u>2023.4.18 22:10更新</u></span>
+									<a href="http://chat.mihayou.xyz/" target="_blank"><i>http://chat.mihayou.xyz/</i></a>
+									<span style="color:#ff0000;">🕛<u>2023.4.19 22:26更新</u></span><br/>形势严峻，GFW太强大了，不知道网址能存活多久，访问不了发邮件至：bfhohy@163.com（看到会及时更新）
 								</li>
 							
 								<li>
