--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 								<li>
 									🔥ChatGPT购买地址①（临时使用）
 									<a href="http://fk.gptka.top/" target="_blank"><i>http://fk.gptka.top/</i></a>
-									<span style="color:#ff0000;">🕛<u>2023.4.20 19:40更新</u></span>
-									<br/><span style="font-size:14px;">形势严峻，GFW太强大了，不知道网址能存活多久，访问不了发邮件至：bfhohy@163.com（看到会及时更新）</span>
+									<span style="color:#ff0000;"><u>2023.4.20 19:40更新</u></span>
+									<span style="font-size:14px;">形势严峻，GFW太强大了，不知道网址能存活多久，访问不了发邮件至：bfhohy@163.com（看到会及时更新）</span>
 								</li>
 							
 								<li>
