--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 							<ul>
 								<li>
 									🔥ChatGPT购买地址①（临时使用）
-									<a href="https://hao.gptka.top/liebiao/177BDDEEA055DDB3" target="_blank"><i>https://hao.gptka.top</i></a>
+									<a href="https://fk.gptka.top/liebiao/177BDDEEA055DDB3" target="_blank"><i>https://fk.gptka.top</i></a>
 									<span style="color:#ff0000;"><u>2023.5.1 16:15更新</u></span>
 									<span style="font-size:14px;">形势严峻，GFW太强大了，不知道网址能存活多久，访问不了发邮件至：bfhohy@163.com（看到会及时更新）</span>
 								</li>
