--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 									🔥ChatGPT购买地址①（临时使用）
 									<a href="http://fk.gptka.live/liebiao/177BDDEEA055DDB3" target="_blank"><i>http://fk.gptka.live</i></a>
 									<span style="color:#ff0000;"><u>2023.5.7 15:00更新</u></span>
-									<span style="font-size:14px;">形势严峻，GFW太强大了，不知道网址能存活多久，访问不了发邮件至：bfhohy@163.com（看到会及时更新）</span>
+									<span style="font-size:14px;">形势严峻，不知道网址能存活多久，访问不了发邮件至：bfhohy@163.com（看到会及时更新）</span>
 								</li>
 							
 								<li>
