--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
 							<h2>请"Ctrl+D "收藏本页浏览器收藏夹</h2>
 							<ul>
 								<li>
-									🔥ChatGPT购买地址①（临时使用）
-									<a href="http://fk.gptka.live/liebiao/177BDDEEA055DDB3" target="_blank"><i>http://fk.gptka.live</i></a>
-									<span style="color:#ff0000;"><u>2023.5.7 15:00更新</u></span>
-									<span style="font-size:14px;">形势严峻，不知道网址能存活多久，访问不了发邮件至：bfhohy@163.com（看到会及时更新）</span>
+									🔥ChatGPT购买地址（临时使用）
+									<a href="https://www.gptfxw.com/" target="_blank"><i>https://www.gptfxw.com/</i></a>
+									<span style="color:#ff0000;"><u>2023.5.20 7:00更新</u></span>
+									<span style="font-size:14px;">如果访问不了发邮件至：bfhohy@163.com（看到会及时更新）</span>
 								</li>
 							
 								<li>
