--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 									🔥ChatGPT购买地址（临时使用）
 									<a href="https://www.gptfxw.com/" target="_blank"><i>https://www.gptfxw.com/</i></a>
 									<span style="color:#ff0000;"><u>2023.5.20 7:00更新</u></span>
-									<span style="font-size:14px;">如果访问不了发邮件至：bfhohy@163.com（看到会及时更新）</span>
+									<span style="font-size:14px;">如果访问不了发邮件至：bfhohy@163.com</span>
 								</li>
 							
 								<li>
