--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 								</li>
 								</li>
 								<li style="font-size: 14px;">
-                                <span>PS：由于众所周知的原因，以上下单地址【不定期更换】，仅在本页同步更新，其他地址无法保证使用期限，切记！<span>
+                                <span>PS：由于众所周知的原因，以上地址【不定期更换】，仅在本页同步更新，务必收藏本页，切记！<span>
 							</ul>
 
 							
