--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 							<ul>
 								<li>
 									🔥ChatGPT购买地址（临时使用）
-									<a href="http://store.gptfxw.com/" target="_blank"><i>https://www.gptfxw.com/</i></a>
+									<a href="http://store.gptfxw.com/" target="_blank"><i>http://store.gptfxw.com/</i></a>
 									<span style="color:#ff0000;"><u>2023.5.27 13:00更新</u></span>
 									<span style="font-size:14px;">如果访问不了发邮件至：bfhohy@163.com</span>
 								</li>
