--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 								<li>
 									🔥ChatGPT中文镜像地址（临时使用）
 									
-								<a href="https://chat.gptka.live/" target="_blank"><i>https://chat.gptka.live/</i></a>	
+								<a href="https://chat.vipshuka.com/" target="_blank"><i>https://chat.vipshuka.com/</i></a>	
 								</li>
 								
 								<li style="font-size: 15px;">
